# mpc_controller

./: CMakeLists.txt  README.md  package.xml
config/: left_arm_simulation.rviz  mpc_utilities.yaml  ref.txt~  test_description.rviz
include/mpc_controller/: data_types.h  kinematics.h
include/mpc_controller/Kinematics/: kinematics.h
include/mpc_controller/inverse_jacobian_calculation/: inverse_jacobian_calculation.h
include/mpc_controller/mpc_controller/: mpc_controller.h
include/mpc_controller/mpc_solver/: mpc_solver_ACADO.h
include/mpc_controller/utilities/: mpc_utilities.h
launch/: arm_left_simulation.launch  sim.launch
scripts/: joint_state_callBack.py
src/: kinematics.cpp  pd_trajectory_generator_node.cpp  pm_controller_node.cpp
src/Kinematics/: kinematics.cpp
src/inverse_jacobian_calculation/: inverse_jacobian_calculation.cpp
src/mpc_controller/: mpc_controller.cpp
src/mpc_solver/: mpc_solver_ACADO.cpp
src/utilities/: mpc_utilities.cpp
test/: kinematics_test.cpp
test/Kinematics/: kinematics_test.cpp
